# inertial_tools

./: CMakeLists.txt  README.md  total_mass.cpp
test/: model.sdf
